fixed bu on buttons were not aligning at he bottom for screen > 500 <1360

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ padding:30px;
 .wrapped-in-buttons {
   position:absolute;  
   bottom:20px;
-  width:315px;
+  width:369px;
 }
 .resize-buttons-type-2 {
      height:90px;
